@startuml

package "config" {
    class FlinkEnvironmentConfig {
          +configure()
    }
}

package "main" {
      class Main {
        main()
      }
}

package "source" {
    class BinanceWebSocketSource {
        +run()
    }
}

package "strategy" {
    abstract class TradingStrategy {
        +buy()
        +sell()
        +hold()
    }

    class SimpleTrader {
      +processElement()
    }
    class CrossingMATrader {
      +processElement()
    }
}

package "model" {
    class Trade {
        +eventType: String
        +eventTimeMs: long
        +symbol: String
        +closePrice: double
        +openPrice: double
        +highPrice: double
        +lowPrice: double
        +volume: double
        +totalVolume: double
        +price: double
    }

    class TradeEvent {
        +symbol: String
        +price: double
        +volume: double
        +action: String
        +comment: String
        +pnl: double
        +pnlPercent: double
        +timestamp: long
        +balance: double
    }
}

package "sink" {
    class InfluxBalanceSink {
        +invoke()
    }
    class CsvSink {
        +toCsv()
    }
    class WriteCSV {
        +writeHeaderIfNotExists()
        +writeRow()
    }
}


' Relationships
TradingStrategy <|-- SimpleTrader
TradingStrategy <|-- CrossingMATrader

Main -> FlinkEnvironmentConfig
Main --> BinanceWebSocketSource
Main --> TradingStrategy
Main --> sink
sink --> model

@enduml